# SignDNE

./: README.md  docs.md  pyproject.toml
.github/workflows/: compile-paper.yml  draft-pdf.yml  pypi-publish.yml  python-publish.yml  test  test.yml
paper/: paper.bib  paper.md
signDNE/: __init__.py
signDNE/src/: signDNE.py
signDNE/tests/: MATLAB_dnes.txt  expected_normal_output.csv  test_signDNE.py  test_signDNE_cli.py  test_utils.py
