[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signDNE"
version = "0.1.0"
authors = [
  { name="Felix Risbro Hjerrild", email="felix+signDNE@hjerrild.org" },
]
description = "SignDNE is a Python package for calculating ariaDNE and its sign-oriented extension"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
dependencies = ['scipy', 'trimesh', 'numpy', 'pyvista', 'pandas', 'networkx', 'rtree', 'pyglet<2']

[project.urls]
Homepage = "https://github.com/frisbro303/SignDNE"

[tool.setuptools]
package-dir = {"" = "signDNE/src"}  # Points to signDNE/src from root

[tool.setuptools.packages.find]
where = ["signDNE/src"]  # Looks for packages in signDNE/src

[project.scripts]
signDNE = "signDNE._signDNE_cli:main"  # Assumes _signDNE_cli.py is in signDNE package
